--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    box-sizing: border-box;
 }
-.banner{
+
+body{
+    font-family: "Poppins", sans-serif;
+}
+nav{
+    background: #000;
+    height: 80px;
+
+}
+
+.logo img{
+    width: 40px;
+    margin-right: 10px;
+}
+
+.background{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("background.jpg");
