--- a/style.css
+++ b/style.css
@@ -9,21 +9,38 @@
 body{
     font-family: "Poppins", sans-serif;
 }
-nav{
-    background: #000;
-    height: 80px;
 
+/* Links til hovednavigation styling */
+a, a:hover{
+    text-decoration: none;
 }
 
-.logo img{
-    width: 40px;
-    margin-right: 10px;
+/* Styling af indhold i bar */
+.top-bar{
+    display: flex;
+    padding: 5px 25px;   
+    background: #212529;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.background{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("background.jpg");
-    background-size: cover;
-    background-position: center;
+/* tekst */
+.top-bar span{
+    color: aliceblue;
 }
+
+/* Styling af boks */
+.top-bar ul{
+    color: #CCE4EB;
+    list-style: none; 
+    display: flex;
+}
+
+/* SoMe links */
+.top-bar li{
+    margin: 2px 10px;
+    font-size: 155%;
+}
+
+
+
