Tilføjet logo til hovednavigation
HAr dog problemer med at få billedet en perfect cirkel. den bliver aflang. bliver ændret senere hvis jeg kan regne den ud

--- a/style.css
+++ b/style.css
@@ -42,5 +42,19 @@ a, a:hover{
     font-size: 155%;
 }
 
+/* Logo */
+.logo img{
+    width: 40px;
+    margin-right: 10px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+
+
+
 
 
