--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ a, a:hover{
     font-size: 155%;
 }
 
+nav{
+    background-color: #0C0B0B;
+    padding: 5px 25px;
+}
+
 /* Logo */
 .logo img{
     width: 40px;
