--- a/style.css
+++ b/style.css
@@ -42,11 +42,16 @@ a, a:hover{
     font-size: 155%;
 }
 
+/* Hovednav */
 nav{
     background-color: #0C0B0B;
     padding: 5px 25px;
     display: flex;
     align-items: center;
+}
+
+nav a{ 
+    color: aliceblue;
 }
 
 /* Logo */
@@ -56,7 +61,9 @@ nav{
     border-radius: 50%;
     overflow: hidden;
     position: relative;
+    border: solid white 1px;
 }
+
 
 
 
