--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ nav a{
     color: aliceblue;
 }
 
+.top-bar span{
+    font-size: 120%;
+
+}
+
 /* Logo */
 .logo img{
     width: 45px;
@@ -75,4 +80,9 @@ nav a{
 /* Links til hovednavigation styling */
 a, a:hover{
     text-decoration: none;
+}
+
+.menu li{
+    padding: 10px 10px;
+    font-size: 20px;
 }
