--- a/style.css
+++ b/style.css
@@ -90,5 +90,17 @@ a, a:hover{
 .toggle{
     display: none;
     font-size: 35px;
+}
 
+@media screen and (max-width: 600px) {
+    nav{
+        position: relative;
+        padding: 5px 10px;
+    }
+
+    .menu{
+    margin-top: 15px;
+
+    
+    
 }
