--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
 
 body{
     font-family: "Poppins", sans-serif;
+    background-image: linear-gradient(
+        to bottom,
+        white   0%,
+        white   40%,
+        #CCE4EB 40%,
+        #CCE4EB 100%
+    );
+    height: 100vh;
 }
 
 
