--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 }
 
+
 body{
     font-family: "Poppins", sans-serif;
     background-image: linear-gradient(
@@ -19,7 +20,7 @@ body{
 }
 
 
-/* Styling af indhold i bar */
+/* Top nav bar */
 .top-bar{
     display: flex;
     padding: 5px 25px;   
@@ -28,7 +29,7 @@ body{
     justify-content: space-between;
 }
 
-/* tekst */
+
 .top-bar span{
     color: aliceblue;
 }
@@ -38,27 +39,27 @@ body{
 
 }
 
-/* Styling af boks */
+
 .top-bar ul{
     color: #CCE4EB;
     list-style: none; 
     display: flex;
 }
 
-/* SoMe links */
+
 .top-bar li{
     margin: 2px 10px;
     font-size: 155%;
 }
 
-/* Hovedmenu */
+/* Hovedmenu bar */
 nav{
     background-color: #0C0B0B;
     display: flex;
     align-items: center;
 }
 
-/* tekst */
+
 nav a{ 
     color:  white;
 }
@@ -69,28 +70,30 @@ nav a{
 
 }
 
-/* Logo */
+
 .logo img{
     width: 45px;
-    margin-right: 10px;
+    margin-right: 25px;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
     border: solid white 1px;
+    left: 20px;
+    top: 4px;
 }
 
 .logo{
     flex: 1;
 }
 
-/* Links */
+
 .menu{
     display: flex;
     align-items: center;
     list-style: none;
 }
 
-/* Links til hovednavigation styling */
+
 a, a:hover{
     text-decoration: none;
 }
@@ -100,17 +103,101 @@ a, a:hover{
     font-size: 20px;
 }
 
+/* menu bar */
 @media screen and (max-width: 600px) {
     nav{
         display: flex;
-        align-items: center;
+        align-items: center
     }
-
     .menu{
-        display: flex;
-        align-items: center;
-        list-style: none;
+     display: flex;
+     align-items: center;
+     list-style: none;   
+    }
+}
 
-    
-    
+
+/* stort logo til */
+.logof img{
+    width: 250px;
+    height: auto;
+    border-radius: 50%;
+    border: solid white 1px;
+    display: block;
+    margin: 0px auto;
+}
+
+h1{
+    text-align: center;
+    font-size: 22px;
+    margin-bottom: 25px;
+}
+
+
+
+/* flexbox forside billeder */
+.container{
+    width: 95%;
+    overflow: hidden;
+    margin: 20px auto;
+    padding: 20px 0px
+}
+
+.container ul{
+    padding: 0px;
+    margin: 0px;
+}
+
+.container ul li{
+    list-style: none;
+    float: left;
+    width: 20%;
+    height: 300px;
+    margin: 300px;
+    box-sizing: border-box;
+    border: 2px solid white;
+
+}
+
+.container ul li .text1{
+    width: auto;
+    height: 25px;
+    line-height: 25px;
+    background: black;
+    text-align: center;
+}
+
+/* gallery */
+@media screen and (max-width: 600px) {
+    .container ul li{
+        width: 40%;
+        margin-left: 40px;
+        float: center;
+        float: left;
+    }
+}
+
+.box1{
+    width: auto;
+    height: 100px;
+}
+.box2{
+    width: auto;
+    height: 100px;
+}
+.box3{
+    width: auto;
+    height: 100px;
+}
+.box4{
+    width: auto;
+    height: 100px;
+}
+.box5{
+    width: auto;
+    height: 100px;
+}
+.box6{
+    width: auto;
+    height: 100px;
 }
