--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body{
     background-image: linear-gradient(
         to bottom,
         white   0%,
-        white   40%,
-        #CCE4EB 40%,
+        white   33%,
+        #CCE4EB 33%,
         #CCE4EB 100%
     );
-    height: 100vh;
+    height: 120vh
 }
 
 
@@ -26,12 +26,15 @@ body{
     padding: 5px 25px;   
     background: #212529;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between
 }
 
 
 .top-bar span{
     color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .top-bar span{
@@ -44,12 +47,15 @@ body{
     color: #CCE4EB;
     list-style: none; 
     display: flex;
+    margin-inline-end: 20px;
 }
 
 
 .top-bar li{
     margin: 2px 10px;
     font-size: 155%;
+    position: relative;
+    float: left;
 }
 
 /* Hovedmenu bar */
@@ -123,81 +129,121 @@ a, a:hover{
     height: auto;
     border-radius: 50%;
     border: solid white 1px;
-    display: block;
-    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
-h1{
+.logof{
+    flex: 1;
+}
+
+h2{
+    display: flex;
     text-align: center;
-    font-size: 22px;
-    margin-bottom: 25px;
+    font-size: 18px;
+    justify-content: center;
+    margin: auto;
+    height: 5rem;
+    background-color: white;
+    grid-area: auto;
 }
-
 
 
 /* flexbox forside billeder */
-.container{
-    width: 95%;
-    overflow: hidden;
-    margin: 20px auto;
-    padding: 20px 0px
+.pic{
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    border: 4px solid #ffff
 }
 
-.container ul{
-    padding: 0px;
-    margin: 0px;
-}
-
-.container ul li{
-    list-style: none;
-    float: left;
-    width: 20%;
-    height: 300px;
-    margin: 300px;
-    box-sizing: border-box;
-    border: 2px solid white;
-
-}
-
-.container ul li .text1{
-    width: auto;
-    height: 25px;
-    line-height: 25px;
-    background: black;
+.box1 {
+    display: flex;
     text-align: center;
-}
+    flex-wrap: wrap;
+    background-color: #CCE4EB
+  }
+  
+  .box1 > * {
+    flex-basis: 100%;
+  }
 
-/* gallery */
-@media screen and (max-width: 600px) {
-    .container ul li{
-        width: 40%;
-        margin-left: 40px;
-        float: center;
-        float: left;
+  .box2 {
+    display: flex;
+    text-align: center;
+    flex-wrap: wrap;
+    background-color: #CCE4EB
+  }
+  
+  .box2 > * {
+    flex-basis: 100%;
+  }
+
+
+/* Om mig */
+.wciditem1 {
+    grid-area: logo;
+    height: 6.25rem;
+    width: 6.25rem;
+  
+  }
+  .wciditem2 {
+    grid-area: info1;
+    height: auto;
+    width: auto;
+    line-height: 1.8;
+  
+  }
+  .wciditem3 {
+    grid-area: logo2;
+    height: 6.25rem;
+    width: 6.25rem;
+  }
+  .wciditem4 {
+    grid-area: info2;
+    height: auto;
+    width: auto;
+    line-height: 1.8;
+  
+  }
+  .wciditem5 {
+    grid-area: logo3;
+    height: 6.25rem;
+    width: 6.25rem;
+  
+  
+  }
+  .wciditem6 {
+    grid-area: info3;
+    height: auto;
+    width: auto;
+    line-height: 1.8;
+  
+  }
+  
+  .wcid > .wcidcontainer {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 2fr 2fr 0.5fr;
+    grid-template-rows: 2fr 2fr 2fr;
+    grid-template-areas:
+    '. logo info1 info1 .'
+    '. logo2 info2 info2 .'
+    '. logo3 info3 info3 .';
+    grid-gap: 1rem;
+    padding: 2rem;
+  }
+  
+  .wcid > .wcidcontainer > div {
+    color: #000000;
+  
+  }
+
+  .wcid {
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: #CCE4EB;
     }
-}
-
-.box1{
-    width: auto;
-    height: 100px;
-}
-.box2{
-    width: auto;
-    height: 100px;
-}
-.box3{
-    width: auto;
-    height: 100px;
-}
-.box4{
-    width: auto;
-    height: 100px;
-}
-.box5{
-    width: auto;
-    height: 100px;
-}
-.box6{
-    width: auto;
-    height: 100px;
-}
+  
