--- a/style.css
+++ b/style.css
@@ -9,14 +9,7 @@
 
 body{
     font-family: "Poppins", sans-serif;
-    background-image: linear-gradient(
-        to bottom,
-        white   0%,
-        white   33%,
-        #CCE4EB 33%,
-        #CCE4EB 100%
-    );
-    height: 120vh
+
 }
 
 
@@ -25,16 +18,14 @@ body{
     display: flex;
     padding: 5px 25px;   
     background: #212529;
-    align-items: center;
-    justify-content: space-between
+    justify-content: space-between;
 }
 
 
 .top-bar span{
     color: aliceblue;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+
 }
 
 .top-bar span{
@@ -125,17 +116,22 @@ a, a:hover{
 
 /* stort logo til */
 .logof img{
-    width: 250px;
+    width: 350px;
     height: auto;
     border-radius: 50%;
     border: solid white 1px;
-    display: flex;
-    justify-content: center;
-    margin: auto;
+    flex-basis: content;
+
 }
 
 .logof{
-    flex: 1;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 600px;
+    text-align: center;
+   
 }
 
 h2{
@@ -143,8 +139,16 @@ h2{
     text-align: center;
     font-size: 18px;
     justify-content: center;
-    margin: auto;
-    height: 5rem;
+    height: auto;
+    background-color: white;
+    width: auto;
+}
+
+h1{
+    display: flex;
+    text-align: center;
+    font-size: 22px;
+    justify-content: center;
     background-color: white;
     grid-area: auto;
 }
@@ -155,30 +159,105 @@ h2{
     width: 100%;
     max-width: 300px;
     height: auto;
-    border: 4px solid #ffff
+    border: 4px solid #ffff;
+    
 }
 
 .box1 {
     display: flex;
     text-align: center;
+    justify-content: center;
     flex-wrap: wrap;
-    background-color: #CCE4EB
+    background-color: #CCE4EB;
+    padding: 2rem;
+    align-items: center;
   }
   
   .box1 > * {
     flex-basis: 100%;
+    padding: 2rem;
+    align-items: center;
   }
 
   .box2 {
     display: flex;
     text-align: center;
+    justify-content: center;
     flex-wrap: wrap;
-    background-color: #CCE4EB
+    background-color: #CCE4EB;
+    padding: 2rem;
+    align-items: center;
   }
   
   .box2 > * {
     flex-basis: 100%;
+    padding: 2rem;
+    align-items: center;
   }
+
+  
+
+  @media screen and (min-width: 550px){
+    .box1{
+        justify-content: center;
+        padding: 2rem;
+        justify-items: center;
+
+    }
+    .box1 >*{
+        flex-basis: content;
+        justify-content: center;
+        padding: 2rem;
+        align-items: center;
+    }
+    .box2{
+      justify-content: center;
+        padding: 2rem;
+        justify-items: center;
+    }
+    .box2 >*{
+      justify-content: center;
+        padding: 2rem;
+        justify-items: center;
+        flex-basis: content;
+    }
+
+  }
+
+
+    @media screen and (min-width: 768px){
+      .box1{
+          justify-content: center;
+          padding: 2rem;
+          justify-items: center;
+  
+      }
+      .box1 >*{
+          flex-basis: content;
+          justify-content: center;
+          padding: 2rem;
+          align-items: center;
+      }
+      .box2{
+        justify-content: center;
+          padding: 2rem;
+          justify-items: center;
+      }
+      .box2 >*{
+        justify-content: center;
+          padding: 2rem;
+          justify-items: center;
+          flex-basis: content;
+      }
+      .main{
+        column-count: 1;
+      }
+  
+    }
+
+
+    
+
 
 
 /* Om mig */
@@ -195,11 +274,13 @@ h2{
     line-height: 1.8;
   
   }
+
   .wciditem3 {
     grid-area: logo2;
     height: 6.25rem;
     width: 6.25rem;
   }
+
   .wciditem4 {
     grid-area: info2;
     height: auto;
@@ -246,4 +327,3 @@ h2{
     align-content: center;
     background-color: #CCE4EB;
     }
-  
