--- a/style.css
+++ b/style.css
@@ -212,13 +212,13 @@ h1{
   /* Specifikt for keyframes aka animation */
   @keyframes play {
     0%{background-position: 0px;}
-    100%{background-position: -5000px;}
+    100%{background-position: -3000px;}
 }
 
 .sprite {
-  width: 500px;
-  height: 500px;
-  background: url('IMG\animation02.png') 0 0 no-repeat;
+  width: 300px;
+  height: 300px;
+  background: url('IMG/animation02.jpg') 0 0 no-repeat;
   animation: play 3s steps(10) infinite;
 }
   
@@ -283,17 +283,6 @@ h1{
 
 
 /* Mit arbejde */
-.sprite {
-  width: 300px;
-  height: 300px;
-  background: url('IMG\animation02.jpg') 0 0 no-repeat;
-  animation: play 3s steps(10) infinite;
-}
-
-@keyframes play {
-  0%{background-position: 0px;}
-  100%{background-position: -3000px;}
-}
 
 .picom{
   width: 100%;
@@ -479,7 +468,3 @@ h1{
     justify-content: center;
     background-color: #CCE4EB;
     }
-
-  
-
-
